bag updates